fixed landing page css

--- a/src/components/DayOnCalendar.css
+++ b/src/components/DayOnCalendar.css
@@ -76,6 +76,7 @@
 }
 .calendar-day.dropup {
   display: flex !important;
+  width: auto !important;
 }
 .dropdown-item {
   font-size: 1.6rem !important;
